# TFG

./: README.md  code_hardware+ros  first_code  first_code_nano
Montaje estructural/: Piezas.md
Montaje_estructural/: Piezas.md
arduino_code/: code_nano_1  main.cpp  platformio.ini
docs/: interaccion_ros.md  pruebas.md
ros_ws/: CMakeLists.txt  alerta_automatica.cpp  package.xml
