<package format="2">
  <name>sensor_alerta</name>
  <version>0.0.1</version>
  <description>Nodo C++ que evalúa distancias y publica una alerta</description>
  <maintainer email="061079369x@uma.es">Juan José</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
